--- a/.github/workflows/vet-ci.yml
+++ b/.github/workflows/vet-ci.yml
@@ -34,7 +34,6 @@ jobs:
           # Path to the policy file.
           # Remove following line to use the default policy
           policy: .github/vet/policy.yml
-          # exclude:
         env:
           # Required for writing pull request comment
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -42,9 +41,9 @@ jobs:
       # Comment the below upload action if you are using
       # private repository and Code Scanning is not available
       # for your Github subscription
-      # - name: Upload SARIF
-      #   uses: github/codeql-action/upload-sarif@v3
-      #   if: ${{ steps.vet.outputs.report != '' }}
-      #   with:
-      #     sarif_file: ${{ steps.vet.outputs.report }}
-      #     category: vet
+      - name: Upload SARIF
+        uses: github/codeql-action/upload-sarif@v3
+        if: ${{ steps.vet.outputs.report != '' }}
+        with:
+          sarif_file: ${{ steps.vet.outputs.report }}
+          category: vet
