--- a/.github/workflows/vet-ci.yml
+++ b/.github/workflows/vet-ci.yml
@@ -31,6 +31,7 @@ jobs:
         id: vet
         uses: safedep/vet-action@v1
         with:
+          exclude: package-lock.json
           # Path to the policy file.
           # Remove following line to use the default policy
           policy: .github/vet/policy.yml
