--- a/.github/workflows/vet-ci.yml
+++ b/.github/workflows/vet-ci.yml
@@ -31,7 +31,7 @@ jobs:
         id: vet
         uses: safedep/vet-action@v1
         with:
-          exclude: package-lock.json
+          exclude: package-lock.json, go.mod
           # Path to the policy file.
           # Remove following line to use the default policy
           policy: .github/vet/policy.yml
